kube/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: vdv-pkpass-django
  namespace: q-personal
  labels:
    app: vdv-pkpass
    part: django
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/scheme: "http"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "8000"
spec:
  selector:
    app: vdv-pkpass
    part: django
  ports:
    - port: 8000
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zuegli
  namespace: q-personal
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - xn--zgli-0ra.app
      secretName: zuegli-tls
  rules:
    - host: xn--zgli-0ra.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vdv-pkpass-django
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vdv-pkpass
  namespace: q-personal
  annotations:
    cert-manager.io/cluster-issuer: "gts"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/rewrite-target: "https://xn--zgli-0ra.app$request_uri"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - vdv-pkpass.magicalcodewit.ch
      secretName: vdv-pkpass-tls
  rules:
    - host: vdv-pkpass.magicalcodewit.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vdv-pkpass-django
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vdv-pkpass-nfc
  namespace: q-personal
  annotations:
    cert-manager.io/cluster-issuer: "gts"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/rewrite-target: "https://xn--zgli-0ra.app$request_uri"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - nfc.xn--zgli-0ra.app
        - vdv-pkpass-nfc.magicalcodewit.ch
      secretName: vdv-pkpass-nfc-tls
  rules:
    - host: nfc.xn--zgli-0ra.app
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: "dummy"
                port:
                  number: 80
    - host: vdv-pkpass-nfc.magicalcodewit.ch
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: "dummy"
                port:
                  number: 80
