kube/django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vdv-pkpass-django
  namespace: q-personal
  labels:
    app: vdv-pkpass
    part: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vdv-pkpass
      part: django
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: vdv-pkpass
        part: django
    spec:
      volumes:
        - name: certs
          secret:
            secretName: vdv-pkpass-certs
        - name: mapkit
          secret:
            secretName: vdv-pkpass-mapkit
        - name: google-creds
          secret:
            secretName: vdv-pkpass-google-creds
      containers:
        - name: gunicorn
          image: theenbyperor/zuegli-django:(version)
          imagePullPolicy: Always
          command: ["gunicorn", "-k", "uvicorn.workers.UvicornWorker", "-w", "4", "-b", "[::]:8000", "--forwarded-allow-ips", "*", "--access-logfile", "-", "--log-level=debug", "--timeout=90", "vdv_pkpass.asgi:application"]
          volumeMounts: *volumeMounts
          ports:
            - containerPort: 8000
          envFrom: *envFrom
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vdv-pkpass-celery
  namespace: q-personal
  labels:
    app: vdv-pkpass
    part: celery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vdv-pkpass
      part: celery
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: vdv-pkpass
        part: celery
    spec:
      volumes:
        - name: certs
          secret:
            secretName: vdv-pkpass-certs
        - name: mapkit
          secret:
            secretName: vdv-pkpass-mapkit
        - name: google-creds
          secret:
            secretName: vdv-pkpass-google-creds
      containers:
        - name: django
          image: theenbyperor/zuegli-django:(version)
          imagePullPolicy: Always
          command: ["celery", "-A", "vdv_pkpass", "worker", "--loglevel=INFO", "-c", "4", "-Q", "celery"]
          volumeMounts:
            - mountPath: "/certs"
              name: certs
            - mountPath: "/mapkit"
              name: mapkit
            - mountPath: "/google-creds"
              name: google-creds
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vdv-pkpass-celery-bg
  namespace: q-personal
  labels:
    app: vdv-pkpass
    part: celery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vdv-pkpass
      part: celery
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: vdv-pkpass
        part: celery
    spec:
      volumes:
        - name: certs
          secret:
            secretName: vdv-pkpass-certs
        - name: mapkit
          secret:
            secretName: vdv-pkpass-mapkit
        - name: google-creds
          secret:
            secretName: vdv-pkpass-google-creds
      containers:
        - name: django
          image: theenbyperor/zuegli-django:(version)
          imagePullPolicy: Always
          command: ["celery", "-A", "vdv_pkpass", "worker", "--loglevel=INFO", "-c", "8", "-Q", "bg"]
          volumeMounts:
            - mountPath: "/certs"
              name: certs
            - mountPath: "/mapkit"
              name: mapkit
            - mountPath: "/google-creds"
              name: google-creds
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vdv-pkpass-beat
  namespace: q-personal
  labels:
    app: vdv-pkpass
    part: beat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vdv-pkpass
      part: beat
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: vdv-pkpass
        part: beat
    spec:
      volumes:
        - name: certs
          secret:
            secretName: vdv-pkpass-certs
        - name: mapkit
          secret:
            secretName: vdv-pkpass-mapkit
        - name: google-creds
          secret:
            secretName: vdv-pkpass-google-creds
      containers:
        - name: django
          image: theenbyperor/zuegli-django:(version)
          imagePullPolicy: Always
          command: ["celery", "-A", "vdv_pkpass", "beat", "--loglevel=INFO", "--scheduler", "django_celery_beat.schedulers:DatabaseScheduler"]
          volumeMounts:
            - mountPath: "/certs"
              name: certs
            - mountPath: "/mapkit"
              name: mapkit
            - mountPath: "/google-creds"
              name: google-creds
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vdv-pkpass-django
  namespace: q-personal
spec:
  podSelector:
    matchLabels:
      app: vdv-pkpass
      part: django
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
        - namespaceSelector:
            matchLabels:
              role: metrics
      ports:
        - protocol: TCP
          port: 8000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vdv-pkpass-celery
  namespace: q-personal
spec:
  podSelector:
    matchLabels:
      app: vdv-pkpass
      part: celery
  policyTypes:
    - Ingress
  ingress: []
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vdv-pkpass-beat
  namespace: q-personal
spec:
  podSelector:
    matchLabels:
      app: vdv-pkpass
      part: beat
  policyTypes:
    - Ingress
  ingress: []
