kube/warp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cf-warp
  namespace: q-personal
  labels:
    app: vdv-pkpass
    part: warp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vdv-pkpass
      part: warp
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: vdv-pkpass
        part: warp
    spec:
      containers:
        - name: warp
          image: caomingjun/warp
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 1080
          securityContext:
            capabilities:
              add:
                - "NET_ADMIN"
          command: ["/bin/bash", "-c"]
          args:
            - |
              sudo mkdir -p /run/dbus
              if [ -f /run/dbus/pid ]; then
                  sudo rm /run/dbus/pid
              fi
              sudo dbus-daemon --config-file=/usr/share/dbus-1/system.conf
              
              sudo warp-svc --accept-tos &
              sleep 10
              
              warp-cli registration new
              warp-cli mode proxy
              warp-cli proxy port 40000
              
              warp-cli --accept-tos connect
              
              sleep 10
              
              gost -L :1080 -F=127.0.0.1:40000
          livenessProbe:
            exec:
              command: ["bash", "-c", "cat < /dev/null > /dev/tcp/127.0.0.1/40000"]
            initialDelaySeconds: 60
            periodSeconds: 5
        - name: clatd
          image: as207960/clatd
          command: [
            "/bin/bash", "-c",
            "/clatd/clatd clat-v6-addr=fd2e:ae7d:58e3:f6ab::1 v4-conncheck-enable=no 'script-up=ip6tables -t nat -A POSTROUTING -o eth0 -j MASQUERADE'"
          ]
          securityContext:
            privileged: true
---
apiVersion: v1
kind: Service
metadata:
  name: cf-warp
  namespace: q-personal
  labels:
    app: vdv-pkpass
    part: warp
spec:
  selector:
    app: vdv-pkpass
    part: warp
  ports:
    - port: 1080
      targetPort: 1080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cf-warp
  namespace: q-personal
spec:
  podSelector:
    matchLabels:
      app: vdv-pkpass
      part: warp
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: vdv-pkpass
      ports:
        - protocol: TCP
          port: 1080
